--- a/facilities.html
+++ b/facilities.html
@@ -168,7 +168,7 @@
             <div class="img5 wow animate__animated animate__fadeInRight"><img src="images/sparrow.jpg"> </div>
         </div>
 
-        <div class="gallerybtn wow animate__animated animate__fadeInDown"> <a href="Room.html"> Rooms </a> </div>
+        <div class="gallerybtn wow animate__animated animate__fadeInDown"> <a href="room.html"> Rooms </a> </div>
 
         <div class="footer">
             <div class="f1">
